# linetasker

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  database.json  main.py  pyproject.toml  register.py  task.py
.github/workflows/: python-app.yml
linetasker/: __main__.py  core.py  main.py  main_typer.py  task.py
linetasker/utils/: filter.py  levelbar.py  logging.py  prettier.py
py_tasks/: .py_tasks.json  core.py  main.py  main_typer.py  task.py
py_tasks/utils/: levelbar.py  prettier.py
tests/: test_core.py  test_register.py
utils/: logging.py
