[tool.poetry]
name = "todo-cli"
version = "0.1.0"
description = ""
authors = ["Anthony <benjaraf006@gmail.com>"]
readme = "README.md"
packages = [{include = "cli_app"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
