[tool.poetry]
name = "py-tasks"
version = "0.1.0"
description = ""
authors = ["Anthony <benjaraf006@gmail.com>"]
readme = "README.md"
packages = [{include = "py_tasks"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipykernel = "^6.23.0"
pytest-dependency = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
