[tool.poetry]
name = "linetasker"
version = "0.1.0"
description = ""
authors = ["Anthony <benjaraf006@gmail.com>"]
readme = "README.md"
packages = [{include = "linetasker"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.3.5"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipykernel = "^6.23.0"
pytest-dependency = "^0.5.1"
coloredlogs = "^15.0.1"
pre-commit = "^3.3.3"

[tool.poetry.group.linters.dependencies]
black = "^23.3.0"
ruff = "^0.0.272"
flake8 = "^6.0.0"
pyupgrade = "^3.6.0"


[tool.ruff]
line-length = 79
target-version = 'py310'
src = ["py_tasks", "tests"]

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''draft.py'''
skip-magic-trailing-comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
